--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,12 @@
 }
 .weather__main {
     position: absolute;
-    left: 3%;
-    top: 15%;
+    left: 5%;
+    top: 5%;
     display: flex;
-    gap: 40px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 .weather__main-temp {
     font-size: 72px;
@@ -27,10 +29,10 @@
 }
 .weather__main-icon-desc {
     display: flex;
-    flex-direction: column;
+    width: 100%;
 }
 .weather__main-icon {
-    width: 100%;
+    width: 50%;
 }
 .weather__main-desc {
     color: aliceblue;
@@ -42,7 +44,7 @@
     background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
     height: 100%;
-    width: 45%;
+    width: 60%;
     padding: 20px 0px 20px 40px;
 }
 .weather__right-search {
@@ -79,7 +81,7 @@
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 50.3%;
+    width: 33%;
 }
 .details__title {
     font-size: 28px;
